# rpa_manga_read

./: .gitignore  README.md  main.py  pyproject.toml
app/: index.py
app/pages/: index.py
app/pages/dentro_manga/_1_baixar/: index.py
app/pages/main_page/_1_enter/: enter.py
app/pages/main_page/_2_escolher_capitulo/: index.py
app/pages/manga_selecionado/_1_escolher_capitulo/: index.py
app/utils/: acessar_site.py  autoGui.py  compactar_imagens.py  cursesAssets.py  image.py  imageToPdf.py  image_utils.py  navegador.py  prevencao_erros.py  toast.py  windows_use.py
scripts/: build.py
