[project]
name = "rpa-manga"
version = "0.1.0"
description = ""
authors = [
    {name = "Ruan Fabricio",email = "victor.ruanfab@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, < 3.14"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "selenium (>=4.29.0,<5.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "pywinauto (>=0.6.9,<0.7.0)",
    "reportlab (>=4.3.1,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "keyboard (>=0.13.5,<0.14.0)",
    "pywin32 (>=309,<310)",
    "pyinstaller (>=6.12.0,<7.0.0)",
    "windows-curses (>=2.4.1,<3.0.0)",
    "notify-py (>=0.3.43,<0.4.0)",
]

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.12.0"

[tool.poetry.scripts]
build = "scripts.build:build"
build_spec = "poetry run pyinstaller baixar_mangá.spec"

[tool.poetry]
packages = [
    {include = "scripts"}
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"